--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
